resolved issues regarding span alignment.

--- a/style.css
+++ b/style.css
@@ -190,7 +190,6 @@ border-color: #86b7fe;
     box-shadow: none !important;
 }
 
-
 /* hero section */
 
 .navbar {
@@ -430,10 +429,8 @@ text-align: center;
 font-size: 14px;
 line-height: 1.4;
 padding: 0 20px; 
-}
-
-.logistic-text .text {
-    display: block;
+margin: 0 auto; 
+max-width: 90%;
 }
 
 .l-content-column {
@@ -441,7 +438,6 @@ display: flex;
 flex-direction: column;
 align-items: center;
 }
-
 }
 
 
@@ -781,13 +777,11 @@ font-weight: normal;
 font-size: 14px; 
 line-height: 1.4;
 text-align: left;
-width: 80%;
-margin: 0 auto; 
+width: 90%;
+margin: 0 auto;
+padding-top: 20px ;
 }
 
-.eco-text .text{
-    display: block;
-}
 
 .e-grey-box {
 width: 80%; 
@@ -808,7 +802,7 @@ margin: 0 auto;
 display: flex;
 flex-direction: column;
 align-items: center; 
-padding: 20px; 
+padding: 20px 40px; 
 max-width: 100%;
 }
 
@@ -976,13 +970,16 @@ color: var(--secondary-color);
 font-size: 1rem;
 line-height: 1.5;
 text-align: left;
+padding-top: 20px;
 }
+
 .trusted-image {
 width: 100%;
 height: 100%;
 border-radius: 8px;
 object-fit: cover;
 }
+
 @media (max-width: 768px) {
 .trust-container {
 flex-direction: column; 
@@ -999,9 +996,11 @@ width: 90%;
 margin-bottom: 15px;
 font-weight: normal;
 }
+
 .trusted-heading .heading {
     display: block; 
 }
+
 .trusted-text {
 font-size: 14px; 
 line-height: 1.4;
@@ -1010,9 +1009,6 @@ width: 90%;
 margin: 0 auto; 
 }
 
-.trusted-text .text{
-    display: block;
-}
 
 .trust-grey-box {
 width: 80%; 
@@ -1044,8 +1040,6 @@ padding: 20px;
 order: 2;
 }
 } 
-
-
 
 
 /* f&q section */
